Added safeties to group and tag names. Tag name cannot be 'tags' and group name cannot be 'groups'. Neither can contain commas. This is for use in databases where the string will be split using commas.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>self.liltinyten</groupId>
     <artifactId>Tags</artifactId>
-    <version>1.06</version>
+    <version>1.08-DEV</version>
     <packaging>jar</packaging>
 
     <name>TagsTest</name>
